syntax = "proto3";

package billing;

option go_package = "github.com/fhe-gbdt-serving/proto/billing";

import "google/protobuf/timestamp.proto";

// BillingService handles subscription management, usage tracking, and invoicing
service BillingService {
  // Subscription management
  rpc CreateSubscription(CreateSubscriptionRequest) returns (CreateSubscriptionResponse);
  rpc GetSubscription(GetSubscriptionRequest) returns (GetSubscriptionResponse);
  rpc UpdateSubscription(UpdateSubscriptionRequest) returns (UpdateSubscriptionResponse);
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);

  // Usage tracking
  rpc GetUsage(GetUsageRequest) returns (GetUsageResponse);
  rpc RecordUsage(RecordUsageRequest) returns (RecordUsageResponse);

  // Invoice management
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse);
  rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse);
  rpc ListInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);

  // Stripe integration
  rpc CreateCheckoutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
  rpc HandleWebhook(HandleWebhookRequest) returns (HandleWebhookResponse);

  // Plan management
  rpc GetPlan(GetPlanRequest) returns (GetPlanResponse);
  rpc ListPlans(ListPlansRequest) returns (ListPlansResponse);
}

// ============================================================================
// Subscription Messages
// ============================================================================

enum SubscriptionStatus {
  SUBSCRIPTION_STATUS_UNSPECIFIED = 0;
  SUBSCRIPTION_STATUS_ACTIVE = 1;
  SUBSCRIPTION_STATUS_CANCELED = 2;
  SUBSCRIPTION_STATUS_PAST_DUE = 3;
  SUBSCRIPTION_STATUS_TRIALING = 4;
  SUBSCRIPTION_STATUS_PAUSED = 5;
}

message Subscription {
  string id = 1;
  string tenant_id = 2;
  string plan_id = 3;
  SubscriptionStatus status = 4;
  string stripe_subscription_id = 5;
  string stripe_customer_id = 6;
  google.protobuf.Timestamp current_period_start = 7;
  google.protobuf.Timestamp current_period_end = 8;
  google.protobuf.Timestamp canceled_at = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  map<string, string> metadata = 12;
}

message CreateSubscriptionRequest {
  string tenant_id = 1;
  string plan_id = 2;
  string payment_method_id = 3;  // Stripe payment method
  string email = 4;
  map<string, string> metadata = 5;
}

message CreateSubscriptionResponse {
  Subscription subscription = 1;
  string client_secret = 2;  // For Stripe confirmation if needed
}

message GetSubscriptionRequest {
  oneof identifier {
    string subscription_id = 1;
    string tenant_id = 2;
  }
}

message GetSubscriptionResponse {
  Subscription subscription = 1;
}

message UpdateSubscriptionRequest {
  string subscription_id = 1;
  string new_plan_id = 2;  // For plan changes
  bool prorate = 3;        // Whether to prorate the change
}

message UpdateSubscriptionResponse {
  Subscription subscription = 1;
}

message CancelSubscriptionRequest {
  string subscription_id = 1;
  bool cancel_at_period_end = 2;  // If true, cancel at end of billing period
  string reason = 3;
}

message CancelSubscriptionResponse {
  Subscription subscription = 1;
}

// ============================================================================
// Plan Messages
// ============================================================================

message PlanFeature {
  string name = 1;
  string description = 2;
  bool enabled = 3;
  string value = 4;  // For features with values (e.g., "10 GB storage")
}

message Plan {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 price_cents = 4;            // Monthly price in cents
  string currency = 5;              // ISO 4217 currency code (e.g., "USD")
  int64 prediction_limit = 6;       // Monthly prediction limit (0 = unlimited)
  int64 overage_price_micros = 7;   // Price per prediction over limit in microdollars
  repeated PlanFeature features = 8;
  string stripe_price_id = 9;       // Stripe price ID for checkout
  bool is_active = 10;
  google.protobuf.Timestamp created_at = 11;
}

message GetPlanRequest {
  string plan_id = 1;
}

message GetPlanResponse {
  Plan plan = 1;
}

message ListPlansRequest {
  bool include_inactive = 1;
}

message ListPlansResponse {
  repeated Plan plans = 1;
}

// ============================================================================
// Usage Messages
// ============================================================================

message Usage {
  string id = 1;
  string tenant_id = 2;
  string subscription_id = 3;
  google.protobuf.Timestamp period_start = 4;
  google.protobuf.Timestamp period_end = 5;
  int64 predictions_count = 6;
  int64 predictions_limit = 7;
  int64 overage_count = 8;
  int64 overage_cost_cents = 9;
  int64 compute_time_ms = 10;
  int64 data_transfer_bytes = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message GetUsageRequest {
  string tenant_id = 1;
  google.protobuf.Timestamp period_start = 2;  // Optional: defaults to current period
  google.protobuf.Timestamp period_end = 3;
}

message GetUsageResponse {
  Usage usage = 1;
  Plan current_plan = 2;
  double usage_percentage = 3;  // Percentage of limit used (0-100+)
}

message RecordUsageRequest {
  string tenant_id = 1;
  int64 predictions_count = 2;
  int64 compute_time_ms = 3;
  int64 data_transfer_bytes = 4;
  string idempotency_key = 5;  // For exactly-once semantics
}

message RecordUsageResponse {
  Usage updated_usage = 1;
  bool limit_exceeded = 2;
  string warning_message = 3;  // Warning when approaching limit
}

// ============================================================================
// Invoice Messages
// ============================================================================

enum InvoiceStatus {
  INVOICE_STATUS_UNSPECIFIED = 0;
  INVOICE_STATUS_DRAFT = 1;
  INVOICE_STATUS_OPEN = 2;
  INVOICE_STATUS_PAID = 3;
  INVOICE_STATUS_VOID = 4;
  INVOICE_STATUS_UNCOLLECTIBLE = 5;
}

message InvoiceLineItem {
  string description = 1;
  int64 quantity = 2;
  int64 unit_price_cents = 3;
  int64 amount_cents = 4;
  string period = 5;  // e.g., "2024-01"
}

message Invoice {
  string id = 1;
  string tenant_id = 2;
  string subscription_id = 3;
  string stripe_invoice_id = 4;
  InvoiceStatus status = 5;
  string currency = 6;
  int64 subtotal_cents = 7;
  int64 tax_cents = 8;
  int64 total_cents = 9;
  int64 amount_paid_cents = 10;
  int64 amount_due_cents = 11;
  repeated InvoiceLineItem line_items = 12;
  google.protobuf.Timestamp period_start = 13;
  google.protobuf.Timestamp period_end = 14;
  google.protobuf.Timestamp due_date = 15;
  google.protobuf.Timestamp paid_at = 16;
  string hosted_invoice_url = 17;  // Stripe hosted invoice page
  string pdf_url = 18;             // Invoice PDF URL
  google.protobuf.Timestamp created_at = 19;
}

message CreateInvoiceRequest {
  string tenant_id = 1;
  string subscription_id = 2;
  google.protobuf.Timestamp period_start = 3;
  google.protobuf.Timestamp period_end = 4;
  bool include_overage = 5;
  bool auto_finalize = 6;
}

message CreateInvoiceResponse {
  Invoice invoice = 1;
}

message GetInvoiceRequest {
  string invoice_id = 1;
}

message GetInvoiceResponse {
  Invoice invoice = 1;
}

message ListInvoicesRequest {
  string tenant_id = 1;
  InvoiceStatus status = 2;
  int32 limit = 3;
  string page_token = 4;
}

message ListInvoicesResponse {
  repeated Invoice invoices = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// ============================================================================
// Checkout Messages
// ============================================================================

message CreateCheckoutSessionRequest {
  string tenant_id = 1;
  string plan_id = 2;
  string success_url = 3;
  string cancel_url = 4;
  string customer_email = 5;
  map<string, string> metadata = 6;
}

message CreateCheckoutSessionResponse {
  string session_id = 1;
  string checkout_url = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// ============================================================================
// Webhook Messages
// ============================================================================

message HandleWebhookRequest {
  bytes payload = 1;
  string signature = 2;  // Stripe-Signature header
}

message HandleWebhookResponse {
  bool processed = 1;
  string event_type = 2;
  string event_id = 3;
  string message = 4;
}
